--- a/crypto/constraints/Cargo.toml
+++ b/crypto/constraints/Cargo.toml
@@ -9,11 +9,15 @@ edition="2021"
 thiserror="1.0"
 
 # parsing
-serde           ="1.0.147"
-serde_json      ="1.0"
-serde_derive    ="1.0.147"
-substrate-common={ path="../substrate-common", default-features=false }
-sp-core         ={ git="https://github.com/paritytech/substrate", branch="polkadot-v0.9.30" }
+serde         ="1.0.147"
+serde_json    ="1.0"
+serde_derive  ="1.0.147"
+entropy-shared={ path="../shared", default-features=false }
+sp-core       ={ git="https://github.com/paritytech/substrate", branch="polkadot-v0.9.30", default-features=false }
 
 # EVM
 web3={ version="0.17.0", default-features=false }
+
+[features]
+default=["std"]
+std    =["serde/std", "serde_json/std", "entropy-shared/std", "sp-core/std"]
