--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -108,7 +108,7 @@ pallet-constraints      ={ version='3.0.0-monthly-2021-10', default-features=fal
 pallet-staking-extension={ version='3.0.0-monthly-2021-10', default-features=false, path='../pallets/staking' }
 pallet-transaction-pause={ version='3.0.0-monthly-2021-10', default-features=false, path='../pallets/transaction-pause' }
 pallet-free-tx          ={ version='3.0.0-monthly-2021-10', default-features=false, path='../pallets/free-tx' }
-substrate-common        ={ path="../crypto/substrate-common", default-features=false }
+entropy-shared          ={ path="../crypto/shared", default-features=false }
 [build-dependencies]
 substrate-wasm-builder={ version="5.0.0-dev", git='https://github.com/paritytech/substrate.git', branch="polkadot-v0.9.30" }
 
