--- a/crypto/constraints/Cargo.toml
+++ b/crypto/constraints/Cargo.toml
@@ -9,9 +9,9 @@ edition="2021"
 thiserror="1.0"
 
 # parsing
-serde         ="1.0.147"
-serde_json    ="1.0"
-serde_derive  ="1.0.147"
+
+serde         ={ version="1.0.147", default-features=false, features=["derive"] }
+serde_json    ={ version="1.0", default-features=false }
 entropy-shared={ path="../shared", default-features=false }
 sp-core       ={ git="https://github.com/paritytech/substrate", branch="polkadot-v0.9.30", default-features=false }
 
