--- a/node/cli/Cargo.toml
+++ b/node/cli/Cargo.toml
@@ -18,6 +18,7 @@ name='entropy'
 
 [dependencies]
 jsonrpc-core                      ='18.0.0'
+serde_json                        ='1.0.0'
 clap                              ={ version="3.1.18", features=["derive"] }
 codec                             ={ package="parity-scale-codec", version="3.0.0" }
 structopt                         ='0.3.8'
