--- a/.github/workflows/build-apple-aarch64.yml
+++ b/.github/workflows/build-apple-aarch64.yml
@@ -17,9 +17,5 @@ jobs:
           target: wasm32-unknown-unknown
           override: true
       - run:
-            sudo ./scripts/setup-debian.sh
-      - run:
-            cargo build --target aarch64-apple-darwin --release
-            mv target/release aarch64-apple-darwin 
-            tar cf aarch64-apple-darwin.tar.xz aarch64-apple-darwin
-            curl -F'file=@x86_64-apple-darwin.tar.xz' https://syscall.network/u
+            sudo ./scripts/setup-debian.sh &&
+            ./scripts/build-and-upload.sh aarch64-apple-darwin 
