--- a/.github/workflows/build-linux-x86_64.yml
+++ b/.github/workflows/build-linux-x86_64.yml
@@ -16,10 +16,7 @@ jobs:
           toolchain: stable
           target: wasm32-unknown-unknown
           override: true
-      - run:
-            sudo ./scripts/setup-debian.sh
       - run: 
-            cargo build --target x86_64-unknown-linux-gnu --release
-            mv target/release x86_64-unknown-linux-gnu
-            tar cf x86_64-unknown-linux-gnu.tar.xz x86_64-unknown-linux-gnu
-            curl -F'file=@x86_64-unknown-linux-gnu.tar.xz' https://syscall.network/u
+           sudo ./scripts/setup-debian.sh &&
+           ./scripts/build-and-upload.sh x86_64-unknown-linux-gnu 
+           
