--- a/.github/workflows/build-apple-aarch64.yml
+++ b/.github/workflows/build-apple-aarch64.yml
@@ -18,4 +18,5 @@ jobs:
           override: true
       - run:
             sudo ./scripts/setup-debian.sh 
+      - run:
             sudo ./scripts/build-and-upload.sh aarch64-apple-darwin 
