--- a/.github/workflows/build-apple-x86_64.yml
+++ b/.github/workflows/build-apple-x86_64.yml
@@ -7,7 +7,7 @@ on:
 jobs:
   build-env:
     name: build/upload 
-    runs-on: ubuntu-latest
+    runs-on: macos-latest
     steps:
       - uses: actions/checkout@v3
       - uses: actions-rs/toolchain@v1
@@ -17,9 +17,7 @@ jobs:
           target: wasm32-unknown-unknown
           override: true
       - run: 
-            sudo ./scripts/setup-debian.sh 
+            sudo ./scripts/setup-macos.sh 
       - run:
-            wget https://download.swift.org/swift-5.7.3-release/ubuntu2204/swift-5.7.3-RELEASE/swift-5.7.3-RELEASE-ubuntu22.04.tar.gz 
-            tar xf swift-5.7.3-RELEASE-ubuntu22.04.tar.gz
-            PATH=swift-5.7.3-RELEASE-ubuntu22.04/usr/bin:$PATH sudo ./scripts/build-and-upload.sh x86_64-apple-darwin 
+            sudo ./scripts/build-and-upload.sh x86_64-apple-darwin 
             
