switch off gh rust

--- a/.github/workflows/build-linux-x86_64.yml
+++ b/.github/workflows/build-linux-x86_64.yml
@@ -10,12 +10,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - uses: actions-rs/toolchain@v1
-        with:
-          profile: minimal
-          toolchain: stable
-          target: wasm32-unknown-unknown
-          override: true
+      #- uses: actions-rs/toolchain@v1
+        #with:
+        #  profile: minimal
+        #  toolchain: stable
+        #  target: wasm32-unknown-unknown
+        #  override: true
       - run:
            sudo ./scripts/setup-debian.sh 
       - run:
