--- a/.github/workflows/build-apple-x86_64.yml
+++ b/.github/workflows/build-apple-x86_64.yml
@@ -10,12 +10,12 @@ jobs:
     runs-on: macos-latest
     steps:
       - uses: actions/checkout@v3
-      - uses: actions-rs/toolchain@v1
-        with:
-          profile: minimal
-          toolchain: stable
-          target: wasm32-unknown-unknown
-          override: true
+      #- uses: actions-rs/toolchain@v1
+      #  with:
+      #    profile: minimal
+      #    toolchain: stable
+      #    target: wasm32-unknown-unknown
+      #    override: true
       - run: 
             sudo ./scripts/setup-macos.sh 
       - run:
