--- a/.github/workflows/build-linux-x86_64.yml
+++ b/.github/workflows/build-linux-x86_64.yml
@@ -6,7 +6,7 @@ on:
 jobs:
   build-env:
     name: build/upload
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04-16core
     steps:
       - uses: actions/checkout@v3
       - run:
