--- a/.github/workflows/build-linux-x86_64.yml
+++ b/.github/workflows/build-linux-x86_64.yml
@@ -7,7 +7,7 @@ on:
 jobs:
   build-env:
     name: build/upload
-    runs-on: ubuntu-20.04-16core
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
       - run:
