--- a/crypto/constraints/Cargo.toml
+++ b/crypto/constraints/Cargo.toml
@@ -11,12 +11,14 @@ thiserror="1.0"
 # parsing
 
 serde         ={ version="1.0.147", default-features=false, features=["derive"] }
-serde_json    ={ version="1.0", default-features=false }
+serde_json    ={ version="1.0", default-features=false, features=["alloc"] }
 entropy-shared={ path="../shared", default-features=false }
 sp-core       ={ git="https://github.com/paritytech/substrate", branch="polkadot-v0.9.31", default-features=false }
 
 # EVM
-web3={ version="0.17.0", default-features=false }
+ethers-core = "0.13.0"
+rlp = "0.5.2"
+hex = "0.4.3"
 
 [features]
 default=["std"]
