--- a/crypto/server/Cargo.toml
+++ b/crypto/server/Cargo.toml
@@ -53,6 +53,9 @@ clap   ={ version="4.0.29", features=["derive"] }
 [dev-dependencies]
 testing-utils={ path="../testing-utils" }
 serial_test  ="0.8.0"
+hex-literal  ="0.3.4"
+sp-keyring   ={ package="sp-keyring", git="https://github.com/paritytech/substrate", branch="polkadot-v0.9.31" }
+project-root ="0.2.2"
 
 [features]
 default=['std']
