--- a/.circleci/then.yml
+++ b/.circleci/then.yml
@@ -70,14 +70,14 @@ workflows:
 jobs:
   fmt-lint-all:
     machine:
-      image: "ubuntu-2004:202201-02"
+      image: "ubuntu-2204:current"
       resource_class: "large"
     steps:
       - install-dependencies-and-checkout
       - fmt-lint
   crypto-server:
     machine:
-      image: "ubuntu-2004:202201-02"
+      image: "ubuntu-2204:current"
       resource_class: "xlarge"
     steps:
       - install-dependencies-and-checkout
@@ -85,28 +85,28 @@ jobs:
         # temp
   # crypto-centralized-keygen:
   #   machine:
-  #     image: "ubuntu-2004:202201-02"
+  #     image: "ubuntu-2204:current"
   #     resource_class: "xlarge"
   #   steps:
   #     - install-dependencies-and-checkout
   #     - run: cd crypto/centralized-keygen
   # crypto-kvdb:
   #   machine:
-  #     image: "ubuntu-2004:202201-02"
+  #     image: "ubuntu-2204:current"
   #     resource_class: "xlarge"
   #   steps:
   #     - install-dependencies-and-checkout
   #     - run: cd crypto/kvdb
   # crypto-entropy-shared:
   #   machine:
-  #     image: "ubuntu-2004:202201-02"
+  #     image: "ubuntu-2204:current"
   #     resource_class: "xlarge"
   #   steps:
   #     - install-dependencies-and-checkout
   #     - run: cd crypto/shared
   node-test:
     machine:
-      image: "ubuntu-2004:202201-02"
+      image: "ubuntu-2204:current"
       resource_class: "xlarge"
     steps:
       - increase-swap
@@ -117,7 +117,7 @@ jobs:
           no_output_timeout: 45m
   node-benchmark:
     machine:
-      image: "ubuntu-2004:202201-02"
+      image: "ubuntu-2204:current"
       resource_class: "xlarge"
     steps:
       - install-dependencies-and-checkout
