fix install service

--- a/.circleci/then.yml
+++ b/.circleci/then.yml
@@ -31,6 +31,7 @@ commands:
       - run: grep Swap /proc/meminfo
   install-dependencies:
     steps:
+      - run: sudo sed -i "/#\$nrconf{restart} = 'i';/s/.*/\$nrconf{restart} = 'a';/" /etc/needrestart/needrestart.conf
       - run: sudo apt-get update
       - run: sudo apt install -y libssl-dev clang libclang-dev
       - run: curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y
