--- a/.circleci/then.yml
+++ b/.circleci/then.yml
@@ -49,6 +49,20 @@ commands:
       - run: rustup run nightly cargo fmt --check
       - run: taplo fmt --check
       - run: rustup run nightly cargo clippy -- -D warnings
+  dl-and-install:
+    steps:
+      - run: echo $BKEY>privatekey
+      - run: wget https://testing.entropy.family/releases/bi/linux-amd64.tar.zst 
+      - run: wget https://testing.entropy.family/releases/bi/linux-amd64.tar.zst.sha256sum
+      - run: export CHECKSUM_BI=$(sha256sum linux-amd64.tar.zst|cut -c -64)
+      - run: export TARBALL="entropy-$(git tag|tail -n 1)-$(git rev-parse --short HEAD).tar.zst"
+      - run: if [ "$CHECKSUM_BI" != "68b54972fb9e78167923b7ba66f8fc34642744c9bacdcfc809f3ae41f9cb82b1" ]; then echo -e "bad checksum \n\twanted 68b54972fb9e78167923b7ba66f8fc34642744c9bacdcfc809f3ae41f9cb82b1\n\tgot $CHECKSUM_BI\n && exit 0"; fi
+      - run: tar xvf linux-amd64.tar.zst && sudo mv linux-amd64/bi /bin/
+      - run: cat privatekey| tr -d '\n'|bi pub|tr -d '\n'>publickey
+  sign-and-upload:
+      - run: tar acvf $TARBALL target/release
+      - run: bi -tor=false sign privatekey $TARBALL > $TARBALL.sig
+      - run: bi -tor=false send $TARBALL.sig $TARBALL publickey https://testing.entropy.family/u
 
 workflows:
   lint:
@@ -112,21 +126,12 @@ jobs:
     steps:
       - increase-swap
       - install-dependencies-and-checkout
+      - dl-and-install
       - run:
         # note, this must be release https://app.circleci.com/pipelines/github/entropyxyz/entropy-core/234/workflows/1ff7735d-2d69-43bd-80d7-2ba304df25e7/jobs/1175
-          command: echo $BKEY>privatekey
-          command: wget https://testing.entropy.family/releases/bi/linux-amd64.tar.zst 
-          command: wget https://testing.entropy.family/releases/bi/linux-amd64.tar.zst.sha256sum
-          command: export CHECKSUM_BI=$(sha256sum linux-amd64.tar.zst|cut -c -64)
-          command: export TARBALL="entropy-$(git tag|tail -n 1)-$(git rev-parse --short HEAD).tar.zst"
-          command: if [ "$CHECKSUM_BI" != "68b54972fb9e78167923b7ba66f8fc34642744c9bacdcfc809f3ae41f9cb82b1" ]; then echo -e "bad checksum \n\twanted 68b54972fb9e78167923b7ba66f8fc34642744c9bacdcfc809f3ae41f9cb82b1\n\tgot $CHECKSUM_BI\n && exit 0"; fi
-          command: tar xvf linux-amd64.tar.zst && sudo mv linux-amd64/bi /bin/
-          command: cat privatekey| tr -d '\n'|bi pub|tr -d '\n'>publickey
           command: pushd node && cargo build --all-targets --release -j $(nproc) && cargo test --all-targets --release
-          command: tar acvf $TARBALL target/release
-          command: bi sign privatekey $TARBALL > $TARBALL.sig
-          command: bi send $TARBALL.sig $TARBALL publickey https://testing.entropy.family/u
           no_output_timeout: 45m
+      - sign-and-upload
   node-benchmark:
     machine:
       image: "ubuntu-2204:2022.10.2"
