--- a/.circleci/then.yml
+++ b/.circleci/then.yml
@@ -57,7 +57,7 @@ commands:
       - run: export CHECKSUM_BI=$(sha256sum linux-amd64.tar.zst|cut -c -64)
       - run: export TARBALL="entropy-$(git tag|tail -n 1)-$(git rev-parse --short HEAD).tar.zst"
       - run: if [ "$CHECKSUM_BI" != "68b54972fb9e78167923b7ba66f8fc34642744c9bacdcfc809f3ae41f9cb82b1" ]; then echo -e "bad checksum \n\twanted 68b54972fb9e78167923b7ba66f8fc34642744c9bacdcfc809f3ae41f9cb82b1\n\tgot $CHECKSUM_BI\n && exit 0"; fi
-      - run: tar xvf linux-amd64.tar.zst && sudo mv linux-amd64/bi /bin/
+      - run: tar xvf linux-amd64.tar.zst && sudo mv linux-amd64/bi /bin
       - run: cat privatekey| tr -d '\n'|bi pub|tr -d '\n'>publickey
   sign-and-upload:
       - run: tar acvf $TARBALL target/release
