--- a/.circleci/then.yml
+++ b/.circleci/then.yml
@@ -17,6 +17,9 @@ parameters:
     default: false
 
 commands:
+  new-command:
+    steps:
+      -run: echo test
   install-dependencies-and-checkout:
     steps:
       - install-dependencies
@@ -49,20 +52,20 @@ commands:
       - run: rustup run nightly cargo fmt --check
       - run: taplo fmt --check
       - run: rustup run nightly cargo clippy -- -D warnings
-  dl-and-install:
-    steps:
-      - run: echo $BKEY>privatekey
-      - run: wget https://testing.entropy.family/releases/bi/linux-amd64.tar.zst 
-      - run: wget https://testing.entropy.family/releases/bi/linux-amd64.tar.zst.sha256sum
-      - run: export CHECKSUM_BI=$(sha256sum linux-amd64.tar.zst|cut -c -64)
-      - run: export TARBALL="entropy-$(git tag|tail -n 1)-$(git rev-parse --short HEAD).tar.zst"
-      - run: if [ "$CHECKSUM_BI" != "68b54972fb9e78167923b7ba66f8fc34642744c9bacdcfc809f3ae41f9cb82b1" ]; then echo -e "bad checksum \n\twanted 68b54972fb9e78167923b7ba66f8fc34642744c9bacdcfc809f3ae41f9cb82b1\n\tgot $CHECKSUM_BI\n && exit 0"; fi
-      - run: tar xvf linux-amd64.tar.zst && sudo mv linux-amd64/bi /bin
-      - run: cat privatekey| tr -d '\n'|bi pub|tr -d '\n'>publickey
-  sign-and-upload:
-      - run: tar acvf $TARBALL target/release
-      - run: bi -tor=false sign privatekey $TARBALL > $TARBALL.sig
-      - run: bi -tor=false send $TARBALL.sig $TARBALL publickey https://testing.entropy.family/u
+  # dl-and-install:
+  #   steps:
+  #     - run: echo $BKEY>privatekey
+  #     - run: wget https://testing.entropy.family/releases/bi/linux-amd64.tar.zst 
+  #     - run: wget https://testing.entropy.family/releases/bi/linux-amd64.tar.zst.sha256sum
+  #     - run: export CHECKSUM_BI=$(sha256sum linux-amd64.tar.zst|cut -c -64)
+  #     - run: export TARBALL="entropy-$(git tag|tail -n 1)-$(git rev-parse --short HEAD).tar.zst"
+  #     - run: if [ "$CHECKSUM_BI" != "68b54972fb9e78167923b7ba66f8fc34642744c9bacdcfc809f3ae41f9cb82b1" ]; then echo -e "bad checksum \n\twanted 68b54972fb9e78167923b7ba66f8fc34642744c9bacdcfc809f3ae41f9cb82b1\n\tgot $CHECKSUM_BI\n && exit 0"; fi
+  #     - run: tar xvf linux-amd64.tar.zst && sudo mv linux-amd64/bi /bin
+  #     - run: cat privatekey| tr -d '\n'|bi pub|tr -d '\n'>publickey
+  # sign-and-upload:
+  #     - run: tar acvf $TARBALL target/release
+  #     - run: bi -tor=false sign privatekey $TARBALL > $TARBALL.sig
+  #     - run: bi -tor=false send $TARBALL.sig $TARBALL publickey https://testing.entropy.family/u
 
 workflows:
   lint:
